﻿0.1.1 - Initial Source
...

[B]Version 0.2.0  (22.09.2018)[/B] by realvito
- added: Videos können jetzt auch als "m3u8" oder "HLS" mit Inputstream abgespielt werden (Settings)
- added: Löschfunktion für den internen Cache des Addons (Settings)
- optimized: Alle Episoden einer Staffel werden jetzt in einem Ordner angezeigt
- optimized: Trailer und Previews werden herausgefiltert
- optimized: Bei angezeigten Videos - Titelbild = grösser + bessere Qualität

[B]Version 0.2.1  (21.10.2018)[/B] by realvito
- fixed: Videos können nicht abgespielt werden (verursacht durch Änderung der Webseitencodierung)