@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.L0RE.3plus" name="3plus TV" version="0.2.1" provider-name="L0RE">
+<addon id="plugin.video.L0RE.3plus" name="3plus TV" version="0.2.2" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
-		<import addon="script.module.beautifulsoup4" version="4.3.2"/>
-		<import addon="script.common.plugin.cache" version="2.5.5" optional="true"/> # Add this
+		<import addon="script.common.plugin.cache" version="2.6.0" optional="true"/>
+		<import addon="plugin.video.3plus_ch" version="1.0.1"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="default.py">
 		<provides>video</provides>
 	</extension>
 	<extension point="xbmc.addon.metadata">
-		<summary lang="de">Videoportal von 3plus.tv</summary>
-		<summary lang="en">video portal from 3plus.tv</summary>
-		<description lang="de">Schweizer TV-Privatsender 3plus. Das abwechslungsreiche Programm von 3+ bietet Unterhaltung mit Schweizer-Eigenproduktionen.[CR]Ausgewählt und zusammengestellt von 3plus (http://3plus.tv/).</description>
-		<description lang="en">Swiss private TV channel 3plus. The varied program of 3+ offers entertainment with Swiss in-house productions.[CR]Selected and compiled by 3plus (http://3plus.tv/).</description>
-		<disclaimer lang="de">Die von diesem Addon dargestellten Inhalte werden von den Erstellern des Addons weder gehostet oder verbreitet, noch stehen die Ersteller in irgendeiner Beziehung zu den Anbietern des Inhalts.</disclaimer>
-		<disclaimer lang="en">The author does not host or distribute any of the content displayed by this addon. The author does not have any affiliation with the content providers.</disclaimer>
+		<summary lang="de_DE">Videoportal von 3plus.tv</summary>
+		<summary lang="en_GB">Videoportal of 3plus.tv</summary>
+		<description lang="de_DE">[COLOR red]- Dieses Addon bekommt einen neuen Pfad im KODI-Verzeichnis ![CR]- Damit wird die Kompatibilität und der Aufruf durch andere Addons wiederhergestellt.[CR][CR]- Bitte das neue Addon mit der Version-No. 1.0.1 AKTIVIEREN.[CR]- Danach dieses Addon mit der Version-No. 0.2.2 DEINSTALLIEREN.[/COLOR]</description>
+		<description lang="en_GB">[COLOR red]- This Addon gets a new path in the KODI directory ![CR]- This restores the compatibility and the call by other addons.[CR][CR]- Please ACTIVATE the new Addon with the Version-No. 1.0.1.[CR]- After that UNINSTALL this Addon with the Version-No. 0.2.2.[/COLOR]</description>
+		<disclaimer lang="de_DE">Die von diesem Addon dargestellten Inhalte werden von den Erstellern des Addons weder gehostet oder verbreitet, noch stehen die Ersteller in irgendeiner Beziehung zu den Anbietern des Inhalts.</disclaimer>
+		<disclaimer lang="en_GB">The author does not host or distribute any of the content displayed by this addon. The author does not have any affiliation with the content providers.</disclaimer>
 		<language></language>
 		<platform>all</platform>
 		<license>GNU GENERAL PUBLIC LICENSE. Version 2, June 1991</license>
@@ -26,8 +26,11 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 0.2.1  (21.10.2018)[/COLOR][/B] by realvito[CR]
-- fixed: Videos können nicht abgespielt werden (verursacht durch Änderung der Webseitencodierung)
+		<broken>
+- Dieses Addon bekommt einen neuen Pfad im KODI-Verzeichnis ![CR]- Damit wird die Kompatibilität und der Aufruf durch andere Addons wiederhergestellt.[CR][CR]- Bitte das neue Addon mit der Version-No. 1.0.1 AKTIVIEREN.[CR]- Danach dieses Addon mit der Version-No. 0.2.2 DEINSTALLIEREN.
+		</broken>
+		<news>[B][COLOR orangered]Version 0.2.2 (19.01.2020)[/COLOR][/B] by realvito[CR]
+- Dieses Addon bekommt einen neuen Pfad im KODI-Verzeichnis ![CR]- Damit wird die Kompatibilität und der Aufruf durch andere Addons wiederhergestellt.[CR][CR]- Bitte das neue Addon mit der Version-No. 1.0.1 AKTIVIEREN.[CR]- Danach dieses Addon mit der Version-No. 0.2.2 DEINSTALLIEREN.
 		</news>
 	</extension>
 </addon>
